Sun Feb  9 12:37:09 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* checkin.c (Checkin): Use cvs_output to print message (should
	make out of order bugs no worse, as it merely substitues a
	protocol_pipe vs. stderr_pipe race instead of a stdout_pipe
	vs. stderr_pipe race).  Add comment about stdout vs. stderr.

Fri Feb  7 08:29:52 1997  Josef Nelissen  <josef.nelissen@munich.ixos.de>

	* server.c (check_command_legal_p): Don't use ANSI-style definition.

Thu Feb  6 10:55:37 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* patch.c (patch): Give a fatal error for -V option (see comment
	for rationale).

	* diff.c (diff): Also send "options" to server.  Pretty much the
	patch submitted independently by josef.nelissen@munich.ixos.de and
	Ronald Khoo <ronald@demon.net>.

Wed Feb  5 18:57:14 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* modules.c (do_module): Fix typo in 30 Jan 97 PATH_MAX nuking
	(free -> free_cwd).  Testsuite test 151 gets credit for catching
	this one.

Mon Feb  3 16:14:54 1997  Ian Lance Taylor  <ian@cygnus.com>

	* main.c (lookup_command_attribute): Don't use an ANSI prototype
	when defining the function.

Fri Jan 31 12:49:02 1997  Ian Lance Taylor <ian@cygnus.com>

	* modules.c (do_module): Actually goto found if is_found is set
	(fixes thinko in PATH_MAX nuking of 30 Jan 97).

Fri Jan 31 12:49:02 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Add modules3 and big to list of tests to run
	by default; they were omitted by accident.

Thu Jan 30 11:46:33 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* logmsg.c, main.c, mkmodules.c, modules.c, parseinfo.c, patch.c:
	Nuke more PATH_MAX.

	* server.c (server_updated): After we send Created or
	Update-existing for a file, mark it as unchanged, in case we
	process it again.
	* sanity.sh (modules3): New tests, test for above fix.

	* logmsg.c (do_verify): Error return from fopen is NULL, not -1.
	Pass errno to error().

	* login.c [_CRAY]: Don't declare getpass.
